--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </head>
   <body class="h-lvh w-lvw bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black overflow-x-hidden overflow-y-auto scroll-smooth text-white">
-    <div id="root" class="h-lvh w-lvw bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black overflow-x-hidden overflow-y-auto scroll-smooth text-white"></div>
+    <div id="root" class="h-lvh w-lvw bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black overflow-x-hidden overflow-y-auto scroll-smooth text-white" id="main"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
