--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml"/>
+    <link rel="icon" type="image/svg+xml" href="https://icons.iconarchive.com/icons/icons8/windows-8/512/Music-Audio-Wave-icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waves</title>
     <!-- To fix 404 error while refresh -->
